// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarouselArrowButton 테스트 렌더링 테스트 next 버튼이 올바르게 렌더링 1`] = `
<button
  class="right-2 group absolute top-1/2 z-10 -translate-y-1/2 rounded-full bg-white/80 p-2 shadow-md transition-all duration-200 hover:bg-white"
>
  <svg
    aria-label="next-arrow"
    class="translate-x-[2px] text-2xl text-gray-800 group-hover:text-gray-600"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 512 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M294.1 256L167 129c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.3 34 0L345 239c9.1 9.1 9.3 23.7.7 33.1L201.1 417c-4.7 4.7-10.9 7-17 7s-12.3-2.3-17-7c-9.4-9.4-9.4-24.6 0-33.9l127-127.1z"
    />
  </svg>
</button>
`;

exports[`CarouselArrowButton 테스트 렌더링 테스트 prev 버튼이 올바르게 렌더링 1`] = `
<button
  class="left-2 group absolute top-1/2 z-10 -translate-y-1/2 rounded-full bg-white/80 p-2 shadow-md transition-all duration-200 hover:bg-white"
>
  <svg
    aria-label="prev-arrow"
    class="-translate-x-[2px] text-2xl text-gray-800 group-hover:text-gray-600"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 512 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M217.9 256L345 129c9.4-9.4 9.4-24.6 0-33.9-9.4-9.4-24.6-9.3-34 0L167 239c-9.1 9.1-9.3 23.7-.7 33.1L310.9 417c4.7 4.7 10.9 7 17 7s12.3-2.3 17-7c9.4-9.4 9.4-24.6 0-33.9L217.9 256z"
    />
  </svg>
</button>
`;
